fix: pet photos now fill tombstone circles correctly on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -261,7 +261,7 @@ body.footer--inline #site-footer {
   z-index: 2;
 }
 
-.marker img {
+.marker > img {
   display: block;
   height: 200px;
   width: auto;
@@ -298,6 +298,7 @@ body.footer--inline #site-footer {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top center;
   display: block;
   border-radius: 50%;
 }
@@ -2743,18 +2744,18 @@ body.nav--solid #nav-hamburger span {
 /* --- Mobile tombstones --- */
 
 @media (max-width: 767px) {
-  .marker img {
-    height: 105px;
+  .marker > img {
+    height: 140px;
   }
 
   .marker-overlay {
-    padding-top: 14px;
-    gap: 2px;
+    padding-top: 18px;
+    gap: 3px;
   }
 
   .marker-photo {
-    width: 30px;
-    height: 30px;
+    width: 46px;
+    height: 46px;
   }
 
   .marker-name {
